# rusty-rays

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  interval.rs  main.rs  ray.rs  renderer.rs  scene_graph.rs
src/renderer/: core.rs  multi_threaded.rs  simple_renderer.rs  single_threaded.rs
src/scene_graph/: material.rs  primitive.rs
