[package]
name = "path-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.17"
glam = "0.24.2"
image = "0.24.7"
minifb = "0.27.0"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "tracing-log",
    "json",
    "tracing",
] }

[profile.release]
debug = true
